--- a/blocks/header/__langs/header__langs.css
+++ b/blocks/header/__langs/header__langs.css
@@ -1,6 +1,13 @@
 .header__langs {
+  display: flex;
   list-style: none;
   padding: 0;
-  margin: 0;
-  display: flex;
+  margin: 0 0 6px;
+}
+
+
+@media screen and (max-width:767px) {
+  .header__langs {
+    margin-bottom: 8px;
+  }
 }
