--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,3 +5,9 @@
   line-height: 26px;
   font-weight: 400;
 }
+
+@media screen and (max-width: 1023px) {
+  .intro__text {
+    max-width: 100%;
+  }
+}
